# IMAQLIQ_task

./: .gitignore  CMakeLists.txt  README.md  client.c  get_opt.c  remove.sh  run.sh  send_data.txt  server.c
service_files/: imaqliq-server.service  imaqliq-server.socket
